tests/error_messages/struct_not_enum.rs
use rotalubat::Rotalubat;

#[derive(Rotalubat)]
struct Jones {
    x: i32,
}

fn main() {}
